--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Nathan Reyes <nathanreyes@me.com>",
   "main": "dist/lib.js",
   "module": "dist/lib.mjs",
+  "files": [
+    "dist/*"
+  ],
   "scripts": {
     "build": "rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
