--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@natedoggit/vue-media-query",
+  "name": "vue-screen-utils",
   "version": "0.0.1",
   "description": "",
   "author": "Nathan Reyes <nathanreyes@me.com>",
