--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "rollup": "^2.74.1",
     "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
     "typescript": "^4.6.4",
     "vue": "^3.2.35"
