--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "dist/*"
   ],
   "scripts": {
-    "build": "rollup -c",
+    "compile": "tsc",
+    "bundle": "rollup -c",
+    "build": "tsc && rollup -c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,10 +20,11 @@
     "vue": "^3.2.0"
   },
   "devDependencies": {
+    "@rollup/plugin-typescript": "^8.3.2",
     "rollup": "^2.74.1",
     "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.31.2",
+    "rollup-plugin-dts": "^4.2.2",
+    "tslib": "^2.4.0",
     "typescript": "^4.6.4",
     "vue": "^3.2.35"
   }
