--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,18 @@
 {
   "compilerOptions": {
-    /* Set the JavaScript language version for emitted JavaScript and include 
-       compatible library declarations. */
+    "typeRoots": ["types"],
     "target": "esnext",
-    /* Specify what JSX code is generated. */
-    "jsx": "preserve",
-    /* Specify what module code is generated. */
     "module": "esnext",
-    /* Specify how TypeScript looks up a file from a given module specifier. */
     "moduleResolution": "node",
-    /* Specify the base directory to resolve non-relative module names. */
-    "baseUrl": "./src",
-    /* Generate .d.ts files from TypeScript and JavaScript files in your project. */
-    "declaration": true,
-    /* Create sourcemaps for d.ts files. */
-    "declarationMap": true,
-    /* Create source map files for emitted JavaScript files. */
+    "outDir": "out-tsc",
     "sourceMap": true,
-    /* Specify an output folder for all emitted files. */
-    "outDir": "./dist",
-    /* Emit additional JavaScript to ease support for importing CommonJS modules.
-       This enables `allowSyntheticDefaultImports` for type compatibility. */
-    "esModuleInterop": true,
-    /* Ensure that casing is correct in imports. */
-    "forceConsistentCasingInFileNames": true,
-    /* Enable all strict type-checking options. */
     "strict": true,
-    /* Skip type checking all .d.ts files. */
-    "skipLibCheck": true
+    "declaration": true,
+    "declarationMap": true,
+    "declarationDir": "out-tsc/dst",
+    "skipLibCheck": true,
+    "esModuleInterop": false
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts"],
+  "include": ["./src"],
   "exclude": ["**/node_modules"]
 }
