--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "dist/*"
   ],
   "scripts": {
-    "compile": "rimraf out-tsc && tsc",
+    "compile": "tsc",
     "bundle": "rollup -c",
-    "build": "rimraf out-tsc && tsc && rollup -c",
+    "build": "tsc && rollup -c && rimraf out-tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
