--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "compile": "tsc",
     "bundle": "rollup -c",
-    "build": "tsc && rollup -c && rimraf out-tsc",
+    "build": "rimraf dist out-tsc && tsc && rollup -c && rimraf out-tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,7 +24,6 @@
     "@rollup/plugin-typescript": "^8.3.2",
     "rimraf": "^3.0.2",
     "rollup": "^2.74.1",
-    "rollup-plugin-clear": "^2.0.7",
     "rollup-plugin-dts": "^4.2.2",
     "tslib": "^2.4.0",
     "typescript": "^4.6.4",
