--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,9 +1,12 @@
 {
+  "module": "esnext",
+  "moduleResolution": "node",
   "extends": "@vue/tsconfig/tsconfig.web.json",
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
     "allowJs": true,
     "baseUrl": ".",
+    "jsx": "preserve",
     "paths": {
       "@/*": ["./src/*"]
     }
