--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-screen-utils",
   "version": "1.0.0-beta.5",
-  "description": "A dependency-free collection of utility functions and plugins for using media queries in Vue 3.",
+  "description": "A dependency-free collection of screen utility functions in Vue 3.",
   "author": "Nathan Reyes <nathanreyes@me.com>",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
